--- a/src/frontend/src/styles/globals.css
+++ b/src/frontend/src/styles/globals.css
@@ -1,14 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 @layer base {
   html,
   body {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    @apply text-gray-800 bg-gray-50 p-0 m-0 font-sans relative w-full min-w-minimum antialiased overflow-hidden;
   }
 
   a {
@@ -20,13 +17,55 @@
     box-sizing: border-box;
   }
 
-  @media (prefers-color-scheme: dark) {
-    html {
-      color-scheme: dark;
-    }
-    body {
-      color: white;
-      background: black;
-    }
+  h1 {
+    @apply text-5xl lg:text-6xl;
   }
+  h2 {
+    @apply text-3xl lg:text-4xl;
+  }
+  h3 {
+    @apply text-2xl lg:text-3xl;
+  }
+  h4 {
+    @apply text-xl lg:text-2xl;
+  }
+  h5 {
+    @apply text-lg lg:text-xl;
+  }
+
+  .container {
+    @apply mx-auto px-4 sm:px-0 sm:max-w-small md:max-w-medium lg:max-w-large xl:max-w-extra-large 2xl:max-w-extra-extra-large;
+  }
+
+  .spacing {
+    @apply py-8 sm:py-16 lg:py-24;
+  }
+}
+
+:root {
+  --primary-dark: #1549AB;
+  --primary: #2361D8;
+  --primary-light: #5189f1;
+  --primary-lightest: #F6FAFF;
+
+  --secondary-dark: #F5B40C;
+  --secondary: #F5B40C;
+  --secondary-light: #F5B40C;
+  --secondary-lightest: #F5B40C;
+  
+  --white: #FFF;
+  --black: #000;
+  --transparent: transparent;
+  --current: currentColor;
+
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #F99C11;
+  --danger: #EA5E5E;
+
+  --facebook: #1877F2;
+  --linkedin: #2867B2;
+  --twitter: #1DA1F2;
+  --youtube: #FF0000;
+  --whatsapp: #25D366;
 }
